@@ -1,4 +1,0 @@
-#!/bin/bash
-echo 'default_gateway=172.17.126.1'
-echo 'datacentre=green'
-echo 'site_iface=site'
